[build-system]
requires = ["setuptools>=57.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-enhancer"
version = "1.0.0"
description = "Image enhancement and colorization API"
requires-python = ">=3.9,<3.10"
dependencies = [
    "Flask==2.0.1",
    "Flask-Cors==3.0.10",
    "numpy==1.19.5",
    "Pillow==8.3.1",
    "opencv-python-headless==4.5.1.48",
    "gunicorn==20.1.0"
] 